--- a/TheNextBigThing/Base.lproj/Main.storyboard
+++ b/TheNextBigThing/Base.lproj/Main.storyboard
@@ -1,25 +1,115 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="2xK-yM-th7">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="ufC-wZ-h7g">
+        <!--Table View Controller-->
+        <scene sceneID="8c0-zA-zri">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
+                <tableViewController id="2xK-yM-th7" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="ek9-ER-HEt">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ITBPostTableViewCell" rowHeight="80" id="O6M-MZ-hbW">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" horizontalHuggingPriority="251" tableViewCell="O6M-MZ-hbW" id="efu-y5-O9J">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AvatarPlaceholdeIcon" translatesAutoresizingMaskIntoConstraints="NO" id="QKW-Dl-x6R">
+                                            <rect key="frame" x="8" y="8" width="64" height="64"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="64" id="7Xf-ip-zvl"/>
+                                                <constraint firstAttribute="height" constant="64" id="maS-Vw-egu"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Marco Arment" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XsB-YR-yTt">
+                                            <rect key="frame" x="80" y="8" width="105.5" height="19.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" id="lgG-Io-Iac"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@marcoarment" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xIq-58-JJ5">
+                                            <rect key="frame" x="193" y="8" width="90.5" height="19.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1h" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="99Y-I7-nya">
+                                            <rect key="frame" x="573" y="8" width="18.5" height="19.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="42" id="tXJ-IG-fPt"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                            <color key="textColor" white="0.50341296930000001" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="tXJ-IG-fPt"/>
+                                                </mask>
+                                            </variation>
+                                        </label>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MnS-NR-xfc">
+                                            <rect key="frame" x="80" y="32" width="512" height="40"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="Wq5-Ck-0CN"/>
+                                            </constraints>
+                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            <dataDetectorType key="dataDetectorTypes" address="YES"/>
+                                        </textView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="MnS-NR-xfc" firstAttribute="leading" secondItem="QKW-Dl-x6R" secondAttribute="trailing" constant="8" id="0yi-Yz-7IZ"/>
+                                        <constraint firstItem="XsB-YR-yTt" firstAttribute="width" secondItem="xIq-58-JJ5" secondAttribute="width" id="9T3-1h-Sf7"/>
+                                        <constraint firstItem="XsB-YR-yTt" firstAttribute="top" secondItem="efu-y5-O9J" secondAttribute="topMargin" id="BkY-s0-jsq"/>
+                                        <constraint firstItem="QKW-Dl-x6R" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="efu-y5-O9J" secondAttribute="bottomMargin" id="DU7-WI-tFH"/>
+                                        <constraint firstItem="QKW-Dl-x6R" firstAttribute="top" secondItem="efu-y5-O9J" secondAttribute="topMargin" id="EcJ-42-OZh"/>
+                                        <constraint firstItem="MnS-NR-xfc" firstAttribute="bottom" secondItem="efu-y5-O9J" secondAttribute="bottomMargin" id="MYY-fC-A9e"/>
+                                        <constraint firstItem="xIq-58-JJ5" firstAttribute="top" secondItem="efu-y5-O9J" secondAttribute="topMargin" id="Vi7-C3-DlI"/>
+                                        <constraint firstItem="QKW-Dl-x6R" firstAttribute="leading" secondItem="efu-y5-O9J" secondAttribute="leadingMargin" id="Wcz-fG-HnE"/>
+                                        <constraint firstItem="99Y-I7-nya" firstAttribute="top" secondItem="efu-y5-O9J" secondAttribute="topMargin" id="c6B-Xc-J3a"/>
+                                        <constraint firstItem="MnS-NR-xfc" firstAttribute="top" secondItem="99Y-I7-nya" secondAttribute="bottom" constant="4" id="cDk-Jk-HYx"/>
+                                        <constraint firstItem="XsB-YR-yTt" firstAttribute="leading" secondItem="QKW-Dl-x6R" secondAttribute="trailing" constant="8" id="g7z-dm-H0B"/>
+                                        <constraint firstItem="xIq-58-JJ5" firstAttribute="top" secondItem="efu-y5-O9J" secondAttribute="topMargin" constant="-8" id="gSg-Rk-dTF"/>
+                                        <constraint firstItem="XsB-YR-yTt" firstAttribute="height" secondItem="xIq-58-JJ5" secondAttribute="height" id="gqq-nc-XEQ"/>
+                                        <constraint firstItem="99Y-I7-nya" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="xIq-58-JJ5" secondAttribute="trailing" constant="8" id="mDj-2y-u4f"/>
+                                        <constraint firstItem="MnS-NR-xfc" firstAttribute="trailing" secondItem="efu-y5-O9J" secondAttribute="trailingMargin" id="mMC-Il-yb7"/>
+                                        <constraint firstItem="99Y-I7-nya" firstAttribute="trailing" secondItem="efu-y5-O9J" secondAttribute="trailingMargin" id="nPn-AC-hXO"/>
+                                        <constraint firstItem="XsB-YR-yTt" firstAttribute="centerX" secondItem="xIq-58-JJ5" secondAttribute="centerX" id="oc3-Gr-Wxc"/>
+                                        <constraint firstItem="xIq-58-JJ5" firstAttribute="leading" secondItem="XsB-YR-yTt" secondAttribute="trailing" constant="8" id="zKb-MP-Ce6"/>
+                                    </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="DU7-WI-tFH"/>
+                                            <exclude reference="9T3-1h-Sf7"/>
+                                            <exclude reference="oc3-Gr-Wxc"/>
+                                            <exclude reference="gSg-Rk-dTF"/>
+                                        </mask>
+                                    </variation>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="2xK-yM-th7" id="sx3-6Y-oNy"/>
+                            <outlet property="delegate" destination="2xK-yM-th7" id="lLl-5R-E9P"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pw7-yN-5ga" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="401" y="296"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="AvatarPlaceholdeIcon" width="32" height="32"/>
+    </resources>
 </document>
