--- a/TheNextBigThing/Base.lproj/Main.storyboard
+++ b/TheNextBigThing/Base.lproj/Main.storyboard
@@ -1,136 +1,51 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="2xK-yM-th7">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="ZF6-NI-ogg">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Posts View Controller-->
-        <scene sceneID="8c0-zA-zri">
+        <scene sceneID="sxc-jC-KjA">
             <objects>
-                <tableViewController id="2xK-yM-th7" customClass="ITBPostsViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="ek9-ER-HEt">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                <viewController id="ZF6-NI-ogg" customClass="ITBPostsViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="HuO-oS-CaD"/>
+                        <viewControllerLayoutGuide type="bottom" id="3vF-Qg-pfq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tOA-Bi-AhT">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ITBPostTableViewCell" rowHeight="80" id="O6M-MZ-hbW" customClass="ITBPostTableViewCell">
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" tableViewCell="O6M-MZ-hbW" id="efu-y5-O9J">
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="252" verticalHuggingPriority="252" image="AvatarPlaceholdeIcon" translatesAutoresizingMaskIntoConstraints="NO" id="QKW-Dl-x6R">
-                                            <rect key="frame" x="8" y="8" width="64" height="64"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="64" id="7Xf-ip-zvl"/>
-                                                <constraint firstAttribute="height" relation="lessThanOrEqual" constant="64" id="ETE-vm-Xe1"/>
-                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="64" id="SRS-hB-Q0Y"/>
-                                                <constraint firstAttribute="width" secondItem="QKW-Dl-x6R" secondAttribute="height" multiplier="1:1" id="e1F-MW-top"/>
-                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="64" id="eAj-Cz-xaI"/>
-                                                <constraint firstAttribute="height" relation="lessThanOrEqual" constant="64" id="maS-Vw-egu"/>
-                                            </constraints>
-                                            <variation key="default">
-                                                <mask key="constraints">
-                                                    <exclude reference="SRS-hB-Q0Y"/>
-                                                    <exclude reference="eAj-Cz-xaI"/>
-                                                    <exclude reference="maS-Vw-egu"/>
-                                                </mask>
-                                            </variation>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="Marco Arment" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XsB-YR-yTt">
-                                            <rect key="frame" x="80" y="8" width="105.5" height="19.5"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" id="lgG-Io-Iac"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="@marcoarment" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xIq-58-JJ5">
-                                            <rect key="frame" x="193" y="8" width="90.5" height="19.5"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="1h" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="99Y-I7-nya">
-                                            <rect key="frame" x="573" y="8" width="18.5" height="19.5"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="42" id="tXJ-IG-fPt"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
-                                            <color key="textColor" white="0.50341296930000001" alpha="1" colorSpace="calibratedWhite"/>
-                                            <nil key="highlightedColor"/>
-                                            <variation key="default">
-                                                <mask key="constraints">
-                                                    <exclude reference="tXJ-IG-fPt"/>
-                                                </mask>
-                                            </variation>
-                                        </label>
-                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MnS-NR-xfc">
-                                            <rect key="frame" x="80" y="32" width="512" height="40"/>
-                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="Wq5-Ck-0CN"/>
-                                            </constraints>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                            <dataDetectorType key="dataDetectorTypes" address="YES"/>
-                                            <variation key="default">
-                                                <mask key="constraints">
-                                                    <exclude reference="Wq5-Ck-0CN"/>
-                                                </mask>
-                                            </variation>
-                                        </textView>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="MnS-NR-xfc" firstAttribute="leading" secondItem="QKW-Dl-x6R" secondAttribute="trailing" constant="8" id="0yi-Yz-7IZ"/>
-                                        <constraint firstItem="XsB-YR-yTt" firstAttribute="width" secondItem="xIq-58-JJ5" secondAttribute="width" id="9T3-1h-Sf7"/>
-                                        <constraint firstItem="XsB-YR-yTt" firstAttribute="top" secondItem="efu-y5-O9J" secondAttribute="topMargin" id="BkY-s0-jsq"/>
-                                        <constraint firstItem="QKW-Dl-x6R" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="efu-y5-O9J" secondAttribute="bottomMargin" id="DU7-WI-tFH"/>
-                                        <constraint firstItem="QKW-Dl-x6R" firstAttribute="top" secondItem="efu-y5-O9J" secondAttribute="topMargin" id="EcJ-42-OZh"/>
-                                        <constraint firstItem="MnS-NR-xfc" firstAttribute="bottom" secondItem="efu-y5-O9J" secondAttribute="bottomMargin" id="MYY-fC-A9e"/>
-                                        <constraint firstItem="xIq-58-JJ5" firstAttribute="top" secondItem="efu-y5-O9J" secondAttribute="topMargin" id="Vi7-C3-DlI"/>
-                                        <constraint firstItem="QKW-Dl-x6R" firstAttribute="leading" secondItem="efu-y5-O9J" secondAttribute="leadingMargin" id="Wcz-fG-HnE"/>
-                                        <constraint firstItem="99Y-I7-nya" firstAttribute="top" secondItem="efu-y5-O9J" secondAttribute="topMargin" id="c6B-Xc-J3a"/>
-                                        <constraint firstItem="MnS-NR-xfc" firstAttribute="top" secondItem="99Y-I7-nya" secondAttribute="bottom" constant="4" id="cDk-Jk-HYx"/>
-                                        <constraint firstItem="XsB-YR-yTt" firstAttribute="leading" secondItem="QKW-Dl-x6R" secondAttribute="trailing" constant="8" id="g7z-dm-H0B"/>
-                                        <constraint firstItem="xIq-58-JJ5" firstAttribute="top" secondItem="efu-y5-O9J" secondAttribute="topMargin" constant="-8" id="gSg-Rk-dTF"/>
-                                        <constraint firstItem="XsB-YR-yTt" firstAttribute="height" secondItem="xIq-58-JJ5" secondAttribute="height" id="gqq-nc-XEQ"/>
-                                        <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="QKW-Dl-x6R" secondAttribute="bottom" id="hW2-JM-cKR"/>
-                                        <constraint firstItem="99Y-I7-nya" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="xIq-58-JJ5" secondAttribute="trailing" constant="8" id="mDj-2y-u4f"/>
-                                        <constraint firstItem="MnS-NR-xfc" firstAttribute="trailing" secondItem="efu-y5-O9J" secondAttribute="trailingMargin" id="mMC-Il-yb7"/>
-                                        <constraint firstItem="99Y-I7-nya" firstAttribute="trailing" secondItem="efu-y5-O9J" secondAttribute="trailingMargin" id="nPn-AC-hXO"/>
-                                        <constraint firstItem="XsB-YR-yTt" firstAttribute="centerX" secondItem="xIq-58-JJ5" secondAttribute="centerX" id="oc3-Gr-Wxc"/>
-                                        <constraint firstItem="xIq-58-JJ5" firstAttribute="leading" secondItem="XsB-YR-yTt" secondAttribute="trailing" constant="8" id="zKb-MP-Ce6"/>
-                                    </constraints>
-                                    <variation key="default">
-                                        <mask key="constraints">
-                                            <exclude reference="DU7-WI-tFH"/>
-                                            <exclude reference="9T3-1h-Sf7"/>
-                                            <exclude reference="oc3-Gr-Wxc"/>
-                                            <exclude reference="gSg-Rk-dTF"/>
-                                        </mask>
-                                    </variation>
-                                </tableViewCellContentView>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="hpn-IY-Jcb" customClass="ITBTableView">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
-                                    <outlet property="textView" destination="MnS-NR-xfc" id="Bia-oB-k9k"/>
+                                    <outlet property="dataSource" destination="ZF6-NI-ogg" id="lZI-4D-gmv"/>
+                                    <outlet property="delegate" destination="ZF6-NI-ogg" id="dvd-42-b7Y"/>
                                 </connections>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="2xK-yM-th7" id="sx3-6Y-oNy"/>
-                            <outlet property="delegate" destination="2xK-yM-th7" id="lLl-5R-E9P"/>
-                        </connections>
-                    </tableView>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="pw7-yN-5ga" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="hpn-IY-Jcb" firstAttribute="top" secondItem="tOA-Bi-AhT" secondAttribute="topMargin" id="J6F-sj-dIL"/>
+                            <constraint firstItem="hpn-IY-Jcb" firstAttribute="leading" secondItem="tOA-Bi-AhT" secondAttribute="leadingMargin" constant="-16" id="PEN-tu-NFt"/>
+                            <constraint firstItem="3vF-Qg-pfq" firstAttribute="top" secondItem="hpn-IY-Jcb" secondAttribute="bottom" id="jrV-gb-cL6"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="hpn-IY-Jcb" secondAttribute="trailing" constant="-16" id="qFt-UK-fWz"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableView" destination="hpn-IY-Jcb" id="fIB-pY-VDP"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lmb-aJ-eyz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="401" y="296"/>
+            <point key="canvasLocation" x="468.80000000000001" y="-225.78"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="AvatarPlaceholdeIcon" width="32" height="32"/>
-    </resources>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
